whitespace and awkward phrasing fixes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -251,12 +251,16 @@ h2 {
 	font-size: 10px;
 }
 .showcase-read-more {
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	flex-wrap:wrap;
-	height:22px;
-	margin-top:10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	height: 22px;
+	margin-top: 4px;
+}
+.showcase-read-more button {
+	position: relative;
+	top: 4px;
 }
 .commission-description {
 	flex: 1;
